[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [{email = "a.j.mitchell@ucl.ac.uk", name = "Andrew Mitchell"}]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "jupyter>=1.1.1",
    "pandas[excel]>=2.2.3",
    "sf-hamilton[lsp,sdk,ui]>=1.88.0",
    "soundscapy>=0.7.8",
]
description = "Python toolkit for working with SATP Data."
dynamic = ["version"]
keywords = []
name = "satp-kit"
optional-dependencies = {dev = [
    "build",
    "mypy",
    "pre-commit",
    "ruff",
    "tox",
    "twine",
], docs = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
], test = [
    "pytest",
    "pytest-cov",
]}
readme = "README.md"
requires-python = ">=3.11"
license.file = "LICENSE.md"
urls.homepage = "https://github.com/soundscape-labs/satp-kit"

[tool.coverage]
report = {sort = "cover"}
run = {branch = true, parallel = true, source = ["satp-kit"]}
paths.source = ["src", ".tox*/*/lib/python*/site-packages"]

[tool.mypy]
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = ["--color=yes", "--import-mode=importlib", "--verbose"]
testpaths = ["tests"]

[tool.ruff]
fix = true
force-exclude = true
lint.ignore = [
    "COM812", # trailing commas (ruff-format recommended)
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D407", # removed dashes lines under sections
    "D417", # argument description in docstring (unreliable)
    "ISC001", # simplify implicit str concatenation (ruff-format recommended)
]
lint.per-file-ignores = {"tests*" = [
    "INP001", # File is part of an implicit namespace package.
    "S101", # Use of `assert` detected
]}
lint.select = ["ALL"]
lint.isort.known-first-party = ["satp_kit"]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = ["classmethod"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/satp_kit/_version.py"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
overrides."tool.tox.env.docs.commands".inline_arrays = false
overrides."tool.tox.env_run_base.commands".inline_arrays = false

[tool.tox]
env_list = ["py311", "py312", "py313"]
env_run_base = {commands = [
    [
        "pytest",
        "--cov",
        "--cov-report=xml",
    ],
], extras = [
    "test",
]}
env.docs = {commands = ["mkdocs", "build", "--strict"], extras = ["docs"]}
gh.python."3.11" = ["py311"]
gh.python."3.12" = ["py312"]
gh.python."3.13" = ["py313"]
